[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clusterorch-gym"
version = "0.1.0"
description = "RL benchmark for training AI agents to diagnose and remediate distributed GPU training failures"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "pydantic==2.9.0",
    "openai",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "httpx==0.27.0",
    "pyyaml==6.0.2",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
